# e2r_frame_generation

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup_env.bash
data/: images.csv
e2r_frame_generation/: Event.py  Events.py  FrameGenerator.py  txt_to_npy.py
include/: Colorizer.h  defs.h  fmg.h  mg.h  tensor2d.h  tensor3d.h
src/: CMakeLists.txt  Colorizer.cpp  colorizer_node.cpp  fmg.cpp  main.cpp  mg.cpp  tensor2d.cpp  tensor3d.cpp
